css tighten and whitespace fix

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -30,14 +30,8 @@ header {
     }
     img {
         max-width: 100%;
-        margin-left: 0;
-        margin-right: 0;
-        margin-top: 0;
-        margin-bottom: 1.25rem;
-        padding-bottom: 0;
-        padding-left: 0;
-        padding-right: 0;
-        padding-top: 0;
+        margin: 0 0 1.25rem 0;
+        padding: 0 0 0 0;
         border-style: none;
     }
     .logo-banner {
